added Link for collection cards

--- a/src/components/collections/collections.module.css
+++ b/src/components/collections/collections.module.css
@@ -1,3 +1,12 @@
+.collectionCard a {
+  text-decoration: none;
+  transition: all 0.2s;
+}
+
+.collectionCard a:hover {
+  color: #3f8aa4;
+}
+
 .collectionCard img {
   width: 200px;
   height: 200px;
