added total price for cart

--- a/src/pages/cart/cart.module.css
+++ b/src/pages/cart/cart.module.css
@@ -8,3 +8,24 @@
   text-align: center;
   font-size: 20px;
 }
+
+.totalPrice {
+  padding: 1.8rem;
+}
+
+.btn {
+  border-radius: 8px;
+  padding: 0.4em 0.8em;
+  border: none;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #377789;
+  color: #fff;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.btn:hover {
+  background-color: #3f8aa4;
+}
